cmake_minimum_required(VERSION 3.16)
if(APPLE)
cmake_policy(SET CMP0167 OLD)
else()
cmake_policy(SET CMP0167 NEW)
endif()
project(auth_loader LANGUAGES C CXX)
set(CMAKE_C_COMPILER_WORKS TRUE CACHE INTERNAL "")
set(CMAKE_CXX_COMPILER_WORKS TRUE CACHE INTERNAL "")
include(FetchContent)
FetchContent_Declare(blake3 GIT_REPOSITORY https://github.com/BLAKE3-team/BLAKE3.git GIT_TAG 1.8.3)
FetchContent_MakeAvailable(blake3)
add_subdirectory(${blake3_SOURCE_DIR}/c ${blake3_BINARY_DIR}/c EXCLUDE_FROM_ALL)
if(APPLE)
set(BOOST_ROOT /opt/homebrew)
set(Boost_ROOT /opt/homebrew)
set(Boost_LIBRARYDIR /opt/homebrew/lib)
set(Boost_INCLUDE_DIR /opt/homebrew/include)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_LIBS OFF)
endif()
find_package(Boost 1.70 REQUIRED COMPONENTS system)
find_package(OpenSSL REQUIRED)
find_package(Threads REQUIRED)
find_package(nlohmann_json REQUIRED)
add_executable(auth main.cpp)
target_include_directories(auth PRIVATE ${Boost_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR})
target_link_libraries(auth PRIVATE Boost::system OpenSSL::SSL OpenSSL::Crypto nlohmann_json::nlohmann_json Threads::Threads blake3)
if(CMAKE_BUILD_TYPE STREQUAL "Release")
target_compile_options(auth PRIVATE -O3 -DNDEBUG)
endif()
