cmake_minimum_required(VERSION 3.16)
if(APPLE)
cmake_policy(SET CMP0167 OLD)
else()
cmake_policy(SET CMP0167 NEW)
endif()
project(auth_loader LANGUAGES C CXX)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include(FetchContent)
FetchContent_Declare(blake3 GIT_REPOSITORY https://github.com/BLAKE3-team/BLAKE3.git GIT_TAG 1.8.3)
FetchContent_MakeAvailable(blake3)
add_subdirectory(${blake3_SOURCE_DIR}/c ${blake3_BINARY_DIR}/c EXCLUDE_FROM_ALL)
find_package(Boost REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(Threads REQUIRED)
find_package(nlohmann_json REQUIRED)
add_executable(auth main.cpp)
if(APPLE)
    target_link_libraries(auth PRIVATE
        "-framework IOKit"
        "-framework CoreFoundation"
    )
endif()
target_link_libraries(auth PRIVATE Boost::boost OpenSSL::SSL OpenSSL::Crypto nlohmann_json::nlohmann_json Threads::Threads blake3)
if(CMAKE_BUILD_TYPE STREQUAL "Release")
target_compile_options(auth PRIVATE -O3 -DNDEBUG)
endif()
